cloudformation-template/basic/ec2.yml
---
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  ParamINSTANCETYPE:
    Description: Enter instance size
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
  ParamAMI:
    Description: Enter ParamINSTANCETYPE
    Type: String
    Default: ami-04505e74c0741db8d
  ParamSSHKEY:
    Description: Enter ssh KeyName
    Type: String
    Default: rkc-keypair-ec2

Resources:
  EC2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: ParamINSTANCETYPE
      ImageId:
        Ref: ParamAMI
      KeyName:
        Ref: ParamSSHKEY
      Tags:
        -
          Key: Name
          Value: rkc-web
      BlockDeviceMappings:
        - DeviceName: /dev/sdm
          Ebs:
            DeleteOnTermination: true
            VolumeSize: 10
      SecurityGroups:
        - !Ref ec2sgsshhttp
      UserData:
        Fn::Base64: |
          #!/bin/bash
          useradd
          sudo apt-get update
          sudo apt-get install -y httpd

  EC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: ParamINSTANCETYPE
      ImageId:
        Ref: ParamAMI
      KeyName:
        Ref: ParamSSHKEY
      Tags:
        -
          Key: Name
          Value: rkc-database
      BlockDeviceMappings:
        - DeviceName: /dev/sdm
          Ebs:
            DeleteOnTermination: true
            VolumeSize: 10
      SecurityGroups:
        - !Ref ec2sgmysql

  ec2sgsshhttp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH/HTTP Access
      SecurityGroupIngress:
        - IpProtocol: tcp
          ToPort: 22
          FromPort: 22
          CidrIp: 3.7.237.29/32
        - IpProtocol: tcp
          ToPort: 80
          FromPort: 80
          CidrIp: 0.0.0.0/0
  ec2sgmysql:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Mysql
      SecurityGroupIngress:
        - IpProtocol: tcp
          ToPort: 3306
          FromPort: 3306
          CidrIp: 10.0.0.0/0

Outputs:
  EC2SecurityGroupIDHTTTP:
    Description: Security Group ID of EC2
    Value: !Ref ec2sgsshhttp
  EC2SecurityGroupIDMysql:
    Description: Security Group ID of EC2
    Value: !Ref ec2sgmysql
  EC2Instance1ID:
    Description: Instance ID of EC2Instance1
    Value: !Ref EC2Instance1
